update getAnimal